[project]
name = "newspaper-web"
version = "0.1.0"
description = "Django web frontend for Newspaper RSS aggregator"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "feedparser>=6.0",
    "requests>=2.31",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.2.2",
    "markdown>=3.10.2",
    "gunicorn>=25.0",
]

[project.scripts]
manage = "manage:main"
